2023-02-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/raylib_generator.py: Emits accessors for struct members
	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/7fd2bf1a32c3ed7c932fe7c020858ecadb3b2056 ) and raygui ( https://github.com/raysan5/raygui/commit/c02a5883e0fa0bf78dbd65e70c530080deac5056 )

2023-02-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/raylib_generator.py: Emits appropriate spaces to align comments

2023-02-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/generate_heightmap_obj.rb: Added

2023-02-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/models_heightmap.rb: Added

2023-02-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/7914332c40ee811ad08a90e4eb7d40c2d1e81f4e ) and raygui ( https://github.com/raysan5/raygui/commit/cec2de3440eac0ad0020d3ce3d546706c0749335 )

2023-01-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added Linux x86_64 binaries
	* Added GitHub Actions scripts

2023-01-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/util/setup_dll.rb: Fixed

2023-01-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added Linux x86_64 binaries

2023-01-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/models_loading_gltf.rb: Added glTF animation playback

2023-01-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/reversi_board.rb: Added

2022-12-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/game_of_life_simple.rb: Added

2022-12-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Now generates binding code for config.h

2022-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Now generates enum descriptions
	* Fixed several codes according to Rubocop warnings
	* lib/raylib_helper.rb: Added several helper functions/classes

2022-12-25  vaiorabbit  <http://twitter.com/vaiorabbit>
