@@ -21,7 +21,6 @@ module Raylib
   SUPPORT_MOUSE_GESTURES = 1
   SUPPORT_SSH_KEYBOARD_RPI = 1
   SUPPORT_WINMM_HIGHRES_TIMER = 1
-  SUPPORT_PARTIALBUSY_WAIT_LOOP = 1
   SUPPORT_SCREEN_CAPTURE = 1
   SUPPORT_GIF_RECORDING = 1
   SUPPORT_COMPRESSION_API = 1
@@ -85,6 +84,7 @@ module Raylib
   SUPPORT_FILEFORMAT_WAV = 1
   SUPPORT_FILEFORMAT_OGG = 1
   SUPPORT_FILEFORMAT_MP3 = 1
+  SUPPORT_FILEFORMAT_QOA = 1
   SUPPORT_FILEFORMAT_XM = 1
   SUPPORT_FILEFORMAT_MOD = 1
   AUDIO_DEVICE_FORMAT = "ma_format_f32"                       # Device output format (miniaudio: float-32bit)
